Fix .sortitem elements being too narrow

--- a/timApp/static/csRun.scss
+++ b/timApp/static/csRun.scss
@@ -219,3 +219,7 @@ p.stem {
     margin-top: 0;
     padding-top: 0;
 }
+
+.sortitem {
+  box-sizing: content-box;
+}
